# pre-commit-pipfile-no-wildcards

./: .pre-commit-hooks.yaml  Pipfile  README.md  setup.cfg  setup.py
pipfile_no_wildcards/: main.py
tests/: bad_Pipfile  good_Pipfile  test_pipfile_no_wildcards.py
