[metadata]
name = pipfile-no-wildcards
version = 0.1.0
description = Checks if your Pipfile contains any wildcard dependencies
long_description = file: README.md
long_description_content_type = text/markdown
author = Wim 
license = Apache
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pipfile-no-wildcards = pipfile_no_wildcards.main:main

[bdist_wheel]
universal = True
